<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp">

    <LinearLayout
        style="@style/WrapContent"
        android:padding="7dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title_tv"
            style="@style/text2"
            android:textStyle="bold"
            android:text="@string/dune" />

        <TextView
            android:id="@+id/author_tv"
            style="@style/text3"
            android:text="@string/frank_herbert" />

        <TextView
            android:id="@+id/description_tv"
            style="@style/text3"
            android:layout_marginTop="5dp"
            android:text="@string/dune_description" />

        <TextView
            android:id="@+id/quantity_tv"
            style="@style/WrapContent"
            android:layout_marginTop="5dp"
            android:text="@string/_10_left"/>


    </LinearLayout>

</android.support.v7.widget.CardView>